# research-team

./: .gitignore  CLAUDE.md  README.md  parameters.yaml  pyproject.toml
.agents/: backend-engineer.md  code-analyst.md  curator.md  data-analyst.md  frontend-engineer.md  literature-researcher.md  orchestrator.md  qa-engineer.md  reporter.md  researcher.md  resource-builder.md
.claude/: settings.json  settings.local.json
agent-analysis/code/: 012-lstm-brent-analysis.md  014-garch-ml-volatility-analysis.md  035-mercure-salas-fttpower-analysis.md  059-usher-esom-gsa-analysis.md  index.md  synthesis-backend-recommendations.md
agent-analysis/data/: 01-data-analysis.md  analysis_results.json  fetch_and_analyse.py  pyproject.toml
agent-catalogue/: index.md
agent-catalogue/topic1-brent-oil-trends/: 001-eia-brent-monthly.md  002-eia-daily-spot-prices.md  003-eia-steo-march-2026.md  004-iea-oil-2025.md  005-iea-weo-2024.md  006-worldbank-cmo-oct-2025.md  007-worldbank-cmo-april-2025.md  008-imf-weo-oct-2025.md  009-owid-crude-oil-prices.md  010-hamilton-2008-nber.md  (+5 more)
agent-docs/: agent-teams.md
agent-findings/: 01-brent-crude-oil-prices.md  02-renewable-energy-investment.md  03-oil-price-renewable-substitution-models.md  04-stress-testing-energy-economics.md  summary.md
agent-report/: brent-renewables-report.pptx  generate_report.py
images/: architecture-diagram.html
notebooks/: 01_model_calibration.ipynb  02_scenario_analysis.ipynb  03_sensitivity_analysis.ipynb
tests/: test_ces.py  test_data.py  test_scenarios.py  test_sensitivity.py  test_volatility.py
(+69 files in other folders)
